--- a/gb/23/6/19/n14018654.md
+++ b/gb/23/6/19/n14018654.md
@@ -3,8 +3,7 @@
 <tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>新住民成节能推广助力    健行科大能源消费分析</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2023/06/id14018657-620169-600x400.jpg" />
-<h6>新住民能源教育辅导计划推广活动大合影。（健行科技大学提供）
-</h6>
+<h6>新住民能源教育辅导计划推广活动大合影。（健行科技大学提供）</h6>
 <hr>
 <p>【大纪元2023年06月19日讯】（大纪元记者徐乃义台湾桃园报导）配合政府节能减碳施政方针，健行科技大学利用执行桃园市政府经济发展局“2023年桃园市住宅部门能源消费分析”委托专业服务案之机会，结合过去多年推动新住民教育与培力之经验与心得，研提“新住民能源教育辅导计划”，并假健行科技大学举办新住民能源教育辅导研习课程。</p>
 <p>计划主持人林仲廉教授表示，招募的学员是以设籍桃园市内之新住民为主，包括来自中国、越南、印尼、泰国、缅甸、柬埔寨、菲律宾与马来西亚等8个国家的新住民，研习目标透过“在地深化融合”、“人才培育传承”、“能源知识多元”等三大目标导向，推出一系列节能教育宣导。研习课程将融入2019课纲，延伸多元教育政策，将能源教育融入新住民族群及移工，推动新住民家庭能源教育宣导长期扎根工作，进而扩展至新住民对能源开发和应用之重视。</p>
@@ -14,41 +13,33 @@
 <p>培训课程设计参考能源教育能力指标订定，包括能源概念、能源使用、能源发展、能源意识、能源议题、全球公民责任、自我实现与行动参与等等。授课讲师邀请到多年致力于推动桃园市永续校园与环境教育，并积极参与新住民语文辅导团的杨宇峰校长与黄木姻校长两位教育先进担任讲座，并安排参观台电大潭发电厂及桃园沿海风力发电厂，期望藉由电厂的实际参访，加深桃园市的新住民族群对这片土地的关怀与认同，达到环境关怀、永续发展的目标。◇</p>
 <p>责任编辑：杜文卿</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/22/9/28/n13834332.md#1">健行科大无人机团队 前瞻公益实证赛百万大奖</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/22/10/5/n13839297.md#1">声宝集团推广体育 赞助健行科大篮球队50万元</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/22/10/17/n13847049.md#1">健行科大2022台湾创新博览会  再创佳绩</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/22/11/22/n13870638.md#1">健行科大创意超大签筒嗨翻天  高教深耕成果优</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/22/11/23/n13871451.md#1">高中生善用投资工具获万元奖金 健行科大竞赛</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/23/4/28/n13983353.md#1">健行科大数媒毕业展 青年局为学生作品喝采</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/23/5/15/n13997326.md#1">健行科大国际嘉年华嗨森活动  建立学习环境</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/18/n14313233.md#1">桃园黑猪肉配基隆小卷 张善政谢国梁推两市农渔产</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/18/n14313181.md#1">台湾首场宝宝奥运会 近四百位0-3岁宝宝同场竞技</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/18/n14313169.md#1">桃园赐安府庆祝包青天圣诞 正义慈悲显赫</a></li>
-<hr>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/11/23/n14122274.md#1">世卫要求北京说明儿童肺炎激增详情</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/11/23/n14122504.md#1">多种病毒流行 世卫要求说明 中国怎么了？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/28/n14645158.md#1">六四抗命军长受审视频曝光 分析：中共末日已近</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/22/n14641240.md#1">中共APT31利用云服务对俄IT产业发动网攻</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank">这些官员为何起诉江泽民</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/3/15/n10219359.md#1" target="_blank">中共淫乱的前生今世（2）江氏“新时代”</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/12/9/14/n3683060.md#1" target="_blank">【石静笛】：网在收！活摘器官再成舆论焦点</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/21/1/23/n12706455.md#1" target="_blank">“天安门自焚”伪案八大悬疑人物</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/3/29/n11148760.md#1" target="_blank">林辉：抗战时毒杀日外交官 英雄难逃中共毒手</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/3/24/n11136773.md#1" target="_blank">捷克参议院通过决议案 要求中共停止迫害</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/16/n14312505.md#1">【美国牧师濒死 惊见撒旦控制人类计划】</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309769.md#1">【未解之谜】震惊泰国的当代现世报：无法逃脱的业力</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309782.md#1">另外空间的鬼有没有轮回？鬼能自救吗？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/15/n14311467.md#1">巴西空难前一天 灵媒直播预言：我看到坠机</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/1/n14302523.md#1">【古道人生】修佛后他足跛眼盲被雷击死 这是佛无灵吗？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/18/n14313324.md#1">【时事军事】库尔斯克攻势无停止迹象 乌军将获最远程导弹</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/17/n14313081.md#1">【菁英论坛】传温家宝发话 习向太子党妥协</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/2/23/n14187735.md#1">【古韵流芳】与苏辛齐名的山水郎朱敦儒</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/16/n14312233.md#1">狗狗健身房里模仿主人做深蹲 视频火遍全网</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/17/n14312853.md#1">中共总理李强开会 国防部长董军尴尬台下坐</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/17/n14312918.md#1">厦门大学发“接管台湾”预案 遭全文删除</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/17/n14313092.md#1">同步晒礼服和戒指 赵丽颖被传与冯绍峰复合？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/16/n14312608.md#1">关晓彤饰贾元春 新《红楼梦》9小时票房仅90万</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/17/n14312668.md#1">《死侍与金钢狼》全球票房破10亿 再创新纪录</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/17/n14313104.md#1">韩星2024年剧酬排名曝光 金秀贤居冠</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/17/n14313061.md#1">徐峥回应新片消费苦难：没看电影直接喷不公平</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/16/n14312224.md#1">厨房里这些地方最容易长霉菌 千万别忽视</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309722.md#1">学会这个技巧 你可以煎太阳蛋、流心蛋、溏心蛋</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/14/n14311371.md#1">乐龄族必吃六类食物 增肌减脂、维持认知力</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/15/n14312095.md#1">日本专家：年过六十 小心五种错误保健方法</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/16/n14312462.md#1">新研究：间歇性禁食优于糖尿病药物</a></li>
-<hr>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/5/n14649620.md#1">幸福不是你能左右多少人，而是多少人愿意在你的左右</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/4/n14648578.md#1">大雪节气寒冬里 如何掌握养生要则与禁忌？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/26/n14643889.md#1">婚姻幸福之道：阴阳平衡 琴瑟和鸣</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650550.md#1">【未解之谜】NASA也无法解释 太阳系神秘入侵者</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/17/n14637529.md#1">【古道人生】书生在饥荒中救一富家女成大富</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/10/n14652776.md#1">【军事情报局】泰柬战争升级 F-16低空轰炸</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/10/n14652899.md#1">【直播】NASA为探索月球、火星所做的准备</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/10/n14652954.md#1">【百年真相】半夜鸡不叫：周扒皮冤案揭秘</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14651393.md#1">普渡大学为何指示院系拒收中国留学生</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14651372.md#1">【直播】NASA太空人告别太空站并关闭舱门</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14651371.md#1">堕胎变催育 中共黑手再次伸向中国女性</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14651351.md#1">迪丽热巴疑遭替身取代宣传新戏 视频吓坏网友</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14652089.md#1">巧合还是刻意？中共官微帖文惊现“于朦胧”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14651415.md#1">刘诗诗得奖遭临时撤换 主办方“爱奇艺”挨轰</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14652213.md#1">张柏芝遭索赔逾千万 法庭上情绪失控崩溃痛哭</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/10/n14652972.md#1">消失一年被传死讯 陆网红冯提莫自曝停工内幕</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651622.md#1">为何在天气寒冷时会手脚冰冷？如何改善？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651688.md#1">如何预防车窗起雾？让Toyota告诉你</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/10/n14652371.md#1">同一双袜子可以穿两次以上再洗吗？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14650995.md#1">不小心让强力胶沾到物体表面 如何清除？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14650878.md#1">研究：说话时善用手势可以增加说服力</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/6/19/n14018654.htm">新住民成节能推广助力    健行科大能源消费分析</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/23/6/19/n14018654.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
